fix service, controller and main structure + split model to model and view + add abstract models