@@ -124,7 +124,8 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.game.arkanoid/com.game.arkanoid.app.HelloApplication</mainClass>
+              <mainClass>com.game.arkanoid/com.game.arkanoid.app.Main</mainClass>
+              <jvmArgs>--enable-native-access=javafx.graphics</jvmArgs>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
